--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="br.edu.ifsp.dmo.syncchat">
 
     <application
         android:allowBackup="true"
@@ -12,15 +13,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SyncChat"
         tools:targetApi="31">
+
+        <!-- Atividade Principal -->
         <activity
-            android:name=".MainActivity"
+            android:name=".view.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
+        <!-- Atividade de Login -->
+        <activity android:name=".view.LoginActivity" />
+
+        <!-- Atividade de Conversa -->
+        <activity android:name=".view.ConversationActivity" />
+
+    </application>
 </manifest>
