--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,9 @@
         android:theme="@style/Theme.SyncChat"
         tools:targetApi="31">
 
-        <!-- Atividade Principal -->
+        <!-- Atividade de Registro (inicial) -->
         <activity
-            android:name=".view.MainActivity"
+            android:name=".view.RegisterActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,8 +24,8 @@
             </intent-filter>
         </activity>
 
-        <!-- Atividade de Login -->
-        <activity android:name=".view.LoginActivity" />
+        <!-- Atividade Principal -->
+        <activity android:name=".view.MainActivity" />
 
         <!-- Atividade de Conversa -->
         <activity android:name=".view.ConversationActivity" />
