Ajustes no buscar por prontuario

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,5 +33,8 @@
         <!-- Atividade de Login -->
         <activity android:name=".view.LoginActivity" />
 
+        <!-- Todas as conversas -->
+        <activity android:name=".view.AllConversationsActivity" />
+
     </application>
 </manifest>
